charts/prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: zerone-monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.staging.01cloud.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-operator-server
            port:
              number: 9090
